--- a/weather_map.html
+++ b/weather_map.html
@@ -6,7 +6,7 @@
     <!-- Mapbox JS -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
     <!-- Mapbox CSS -->
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet'/>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,16 +15,48 @@
             height: 500px;
             width: 100%;
         }
+
+        .forecasts {
+            width: 100%;
+            /*height: 400px;*/
+            background-color: grey;
+            margin-top: 3em;
+            overflow: auto;
+        }
+        .days {
+            /*height: calc(100% - 2em);*/
+            height: 200px;
+            width: calc((100%/5) - 2em);
+            /*width: 20px;*/
+            margin: 1em 1em;
+            border: 1px solid black;
+            background-color: pink;
+        }
+
     </style>
 </head>
 <body>
 
-<input type="text" id="search" placeholder="Enter Place">
-<div id="map"></div>
-<pre id="info"></pre>
+<!--header-->
 
 
+<div class="container">
+    <div class="forecasts d-flex flex-nowrap justify-content-center row">
+        <div class="days col-2"></div>
+        <div class="days col-2"></div>
+        <div class="days col-2"></div>
+        <div class="days col-2"></div>
+        <div class="days col-2"></div>
+<!--        <div class="days col-2"></div>-->
+<!--        <div class="days col-2"></div>-->
+    </div>
 
+
+</div>
+
+
+<!--<input type="text" id="search" placeholder="Enter Place">-->
+<!--<div id="map"></div>-->
 
 
 <!--Jquery-->
