fixed scroll bar

--- a/weather_map.html
+++ b/weather_map.html
@@ -71,7 +71,7 @@
         }
 
         .info p{
-            padding: .25em .5em;
+            padding: .05em .5em;
         }
         .weathers {
             height: 100%;
@@ -79,9 +79,10 @@
 
 
         .three-hour {
+            min-width: 96px;
             max-width: 170px;
             margin: 0 .5em;
-            height: calc(100% - 2em);
+            min-height: calc(100% - 2em);
 
             border: 1px solid #eddad8;
             border-radius: 15px;
@@ -101,6 +102,7 @@
             margin: 0 auto;
             height: calc(100% - 2em);
         }
+
 
          .background {
              height: 100%;
