fixed card and button for first card

--- a/weather_map.html
+++ b/weather_map.html
@@ -175,14 +175,16 @@
         /*    max-height: 160px;*/
         /*}*/
         .medium-icon {
-            width: 15%;
+            width: 8%;
         }
         /*@media only screen and (max-width: 600px) {*/
         /*    body {*/
         /*        color: red;*/
         /*    }*/
         /*}*/
-
+.card-one {
+    color: transparent;
+}
 
 
 
