changed marker color

--- a/weather_map.html
+++ b/weather_map.html
@@ -171,6 +171,14 @@
 
         }
 
+
+        /*marker color*/
+        path {
+            fill: #2a2d6a;
+        }
+
+
+
         /*.three-hour {*/
         /*    max-height: 160px;*/
         /*}*/
