changed theme color

--- a/weather_map.html
+++ b/weather_map.html
@@ -88,7 +88,10 @@
             border-radius: 15px;
             padding: 1em 0;
             /*background-color: rgb(125, 124, 125,.2);*/
-            background-color: rgb(76,74,124,.1);
+            /*purple*/
+            /*background-color: rgb(76,74,124,.1);*/
+        /*    red*/
+            background-color: rgb(191,96,7,.1);
         }
 
         /*.three-hour:nth-child(even) {*/
@@ -137,7 +140,10 @@
         .header {
             /*margin: 0 1em;*/
             /*background-color: rgb(125, 124, 125,.2);*/
-            background-color: rgb(76,74,124,.3);
+            /*purple*/
+            /*background-color: rgb(76,74,124,.3);*/
+            /*red*/
+            background-color: rgb(158,29,1,.5);
             /*background-opacity: .5%;*/
         }
 
@@ -147,7 +153,10 @@
         }
 
         input {
-            background-color: #f9ddd4;
+            /*purple*/
+            /*background-color: #f9ddd4;*/
+            /*red*/
+            background-color: #f5e287;
             border: 1px solid #31336e;
             width: 200px;
             padding-left: .5em;
@@ -167,8 +176,8 @@
         }
 
         body {
-            background: linear-gradient(#f9ddd4, #161c60);
-
+            /*background: linear-gradient(#f9ddd4, #161c60);*/
+            background: linear-gradient(#ffe000, #9a1301);
         }
 
 
