fixed some style toggle issues

--- a/weather_map.html
+++ b/weather_map.html
@@ -91,7 +91,14 @@
             /*purple*/
             /*background-color: rgb(76,74,124,.1);*/
         /*    red*/
-            background-color: rgb(191,96,7,.1);
+        /*    background-color: rgb(191,96,7,.1);*/
+        }
+
+        .red-weather {
+            background-color: rgb(191,96,7,.1)
+        }
+        .purple-weather {
+            background-color: rgb(76,74,124,.1);
         }
 
         /*.three-hour:nth-child(even) {*/
