--- a/weather_map.html
+++ b/weather_map.html
@@ -150,7 +150,7 @@
             /*purple*/
             /*background-color: rgb(76,74,124,.3);*/
             /*red*/
-            background-color: rgb(158,29,1,.5);
+            background-color: rgb(158,29,1,.4);
             /*background-opacity: .5%;*/
         }
 
@@ -175,7 +175,8 @@
         }
 
         .search-red {
-            background-color: #f5e287;
+            /*background-color: #f5e287;*/
+            background-color: #faf9c6;
         }
         .search-purple {
             background-color: #f9ddd4;
@@ -201,7 +202,8 @@
         }
 
         .body-bg-red {
-            background: linear-gradient(#ffe000, #9a1301);
+            /*background: linear-gradient(#ffe000, #9a1301);*/
+            background: linear-gradient( #fbf6a3, #9a1301);
         }
 
 
@@ -250,7 +252,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #f5cb01;
+            background-color: #af4524;
             -webkit-transition: .4s;
             transition: .4s;
         }
