--- a/weather_map.html
+++ b/weather_map.html
@@ -95,7 +95,8 @@
         }
 
         .red-weather {
-            background-color: rgb(191,96,7,.1)
+            /*background-color: rgb(191,96,7,.1)*/
+            background-color: rgb(237,166,165, .2);
         }
         .purple-weather {
             background-color: rgb(76,74,124,.1);
@@ -150,8 +151,12 @@
             /*purple*/
             /*background-color: rgb(76,74,124,.3);*/
             /*red*/
-            background-color: rgb(158,29,1,.4);
+            /*background-color: rgb(158,29,1,.4);*/
+            /*background-color: rgb(236,166,165,.5);*/
             /*background-opacity: .5%;*/
+            /*background-color: #f3c8a4;*/
+            /*background-color: #f1bfa4;*/
+            background-color: #f7dda4;
         }
 
         .header-purple {
@@ -176,7 +181,8 @@
 
         .search-red {
             /*background-color: #f5e287;*/
-            background-color: #faf9c6;
+            /*background-color: #faf9c6;*/
+            background-color: #faf2e8;
         }
         .search-purple {
             background-color: #f9ddd4;
@@ -198,12 +204,16 @@
         }
 
         .body-bg-purple {
-            background: linear-gradient(#f9ddd4, #161c60);
+            /*background: linear-gradient(#f9ddd4, #161c60);*/
+            background: linear-gradient(#f9ddd4, #615c86);
+
         }
 
         .body-bg-red {
             /*background: linear-gradient(#ffe000, #9a1301);*/
-            background: linear-gradient( #fbf6a3, #9a1301);
+            /*background: linear-gradient( #fbf6a3, #b85832);*/
+            background: linear-gradient( #fbf6a3, #eca5a5);
+
         }
 
 
@@ -252,7 +262,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #af4524;
+            background-color: #f3caa4;
             -webkit-transition: .4s;
             transition: .4s;
         }
@@ -270,7 +280,8 @@
         }
 
         input:checked + .slider {
-            background-color: #383971;
+            /*background-color: #383971;*/
+            background-color: #92859f;
         }
 
         /*input:focus + .slider {*/
